# pyqt_rest_client

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
doc/: dev_notes.md  for_development.md
pyqt_rest_client/: __init__.py  asyncio_integration.py  reply.py  request.py  url.py
tests/: QtRequestsMock.py  conftest.py  test_asyncio_integration.py  test_custom_requests_logging.py  test_pyqt_rest_client.py  test_reply.py  test_request.py  test_url_forming.py
usage_example/: main.py  petstore_api.py
usage_example/dataclasses/: pet.py
