[tool.poetry]
name = "pyqt_rest_client"
version = "0.1.0"
description = ""
authors = ["fleshofcat <fleshofcat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.6"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
