[tool.poetry]
name = "pyqt_rest_client"
version = "0.1.0"
description = ""
authors = ["fleshofcat <fleshofcat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.6"
pydantic = "^1.9.1"
qasync = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
pytest-qt = "^4.0.2"
pytest-timeout = "^2.1.0"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
timeout = 1800 # sec
timeout_method = "thread"
asyncio_mode = "auto"

[tool.isort]
profile = "black"

